# dual_arm_control

./: README.md
dual_arm_control/dual_arm_control/: CMakeLists.txt  package.xml
dual_arm_control/dual_arm_description/: CMakeLists.txt  package.xml
dual_arm_control/dual_arm_description/launch/: display.launch
dual_arm_control/dual_arm_description/rviz/: rviz.rviz
dual_arm_control/dual_arm_description/urdf/openarm/: openarm_bimanual.urdf  openarm_bimanual_sim.urdf
dual_arm_control/joint_control/: CMakeLists.txt  package.xml
dual_arm_control/pinocchio_interface/include/joint_controller/: joint_controller.h
dual_arm_control/pinocchio_interface/launch/: controller.launch
dual_arm_control/pinocchio_interface/src/: joint_controller.cpp
